Lab 04 "Add VAT" from the lesson for Functional Programming, a part of Java Advanced course.